# type-toppings

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  justfile
.helix/: languages.toml
src/: iterator.rs  lib.rs  option.rs  report.rs  result.rs  stream.rs
src/iterator/: map_into.rs  map_opt.rs  map_res.rs  map_res_err.rs
