[package]
name = "type-toppings"
version = "0.2.0"
authors = ["Asger Juul Brunshøj <asgerbrunshoj@gmail.com>"]
description = "Opinionated extensions to standard types"
edition = "2021"
publish = true
readme = "README.md"
license = "MIT"
repository = "https://github.com/plul/type-toppings"

[features]
default = []
iterator = []
result = ["error_reporter"]
stream = ["futures"]


[dependencies]
error_reporter = { version = "1", optional = true }
futures = { version = "0.3.28", optional = true }

[dev-dependencies]
derive_more = { version = "1", features = ["error", "display", "from"] }

[lints.rust]
future_incompatible = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
missing_docs = "deny"
missing_debug_implementations = "warn"
