[package]
authors = ["Asger Juul Brunshøj <asgerbrunshoj@gmail.com>"]
description = "Opinionated extensions to standard types"
edition = "2024"
license = "MIT"
name = "type-toppings"
publish = true
readme = "README.md"
repository = "https://github.com/plul/type-toppings"
version = "0.2.1"

[features]
default = ["option", "result", "iterator"]
full = ["iterator", "option", "result", "stream"]
iterator = []
option = []
result = []
stream = ["futures"]

[package.metadata.docs.rs]
features = ["full"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
futures = { version = "0.3.28", optional = true }

[dev-dependencies]
derive_more = { version = "2", features = ["error", "display", "from"] }

[lints.rust]
future_incompatible = { level = "deny", priority = -1 }
missing_debug_implementations = "warn"
missing_docs = "deny"
nonstandard_style = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
